# OpenBB

openbb_platform/openbb/assets/: reference.json
openbb_platform/openbb/package/: __extensions__.py  economy.py  equity.py  equity_compare.py  equity_ownership.py  equity_price.py  etf.py  fixedincome_government.py
openbb_platform/providers/ibkr/: README.md  __init__.py  connection1.docx  pyproject.toml
openbb_platform/providers/ibkr/openbb_ibkr/: __init__.py  main.py
openbb_platform/providers/ibkr/openbb_ibkr/utils/: __init__.py  connection.py  constants.py  helpers.py
openbb_platform/providers/ibkr/tests/: test_template_fetchers.py
