[tool.poetry]
name = "openbb-ibkr"
version = "1.0.0"
description = "Interactive Brokers Provider Extension for the OpenBB Platform"
authors = ["Drew Ilik <179341198+drew-ilik@users.noreply.github.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_ibkr" }]

[tool.poetry.dependencies]
python = "^3.10"
openbb-core = "^1.1.2"
ib_async = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
ibkr = "openbb_ibkr:ibkr_provider"
